1. firestore related API implemented 2. Need to solve: emulation env -> Storage still calls cloud API route
